--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
 [[https://melpa.org/#/casual-suite][file:https://melpa.org/packages/casual-suite-badge.svg]]
+
 * Casual Suite
 An umbrella package to support a single installation point for all Casual porcelains. These porcelains built with [[https://github.com/magit/transient][Transient]] are included via the [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Library-Headers.html][Elisp library header]] ~Package-Requires~. Included porcelains are:
 
@@ -31,11 +32,11 @@ The following lines illustrate an installation of the Casual Suite with no custo
 
 #+begin_src elisp :lexical no
   (require 'casual-suite)
-  (define-key calc-mode-map (kbd "C-o") #'casual-calc-tmenu)
-  (define-key dired-mode-map (kbd "C-o") #'casual-dired-tmenu)
-  (define-key info-mode-map (kbd "C-o") #'casual-info-tmenu)
+  (keymap-set calc-mode-map "C-o" #'casual-calc-tmenu)
+  (keymap-set dired-mode-map "C-o" #'casual-dired-tmenu)
+  (keymap-set Info-mode-map "C-o" #'casual-info-tmenu)
   (keymap-global-set "M-g" #'casual-avy-tmenu)
-  (define-key isearch-mode-map (kbd "<f2>") #'casual-isearch-tmenu)
+  (keymap-set isearch-mode-map "<f2>" #'cc-isearch-menu-transient)
 #+end_src
 
 For an alternate install using ~use-package~:
