--- a/README.org
+++ b/README.org
@@ -1,17 +1,18 @@
 [[https://melpa.org/#/casual-suite][file:https://melpa.org/packages/casual-suite-badge.svg]]
 
 * Casual Suite
-An umbrella package to support a single installation point for all Casual porcelains. These porcelains built with [[https://github.com/magit/transient][Transient]] are included via the [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Library-Headers.html][Elisp library header]] ~Package-Requires~. Included porcelains are:
+An umbrella package to support a single installation point for all Casual porcelains for Emacs. These porcelains built with [[https://github.com/magit/transient][Transient]] are included via the [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Library-Headers.html][Elisp library header]] ~Package-Requires~. Included porcelains are:
 
 - [[https://github.com/kickingvegas/casual-isearch][Casual I-Search]] - a Transient menu for I-Search.
-- [[https://github.com/kickingvegas/casual-dired][Casual Dired]] - a Transient porcelain for the Emacs file manager Dired.
+- [[https://github.com/kickingvegas/casual-dired][Casual Dired]] - a Transient porcelain for the Dired file manager.
 - [[https://github.com/kickingvegas/casual-info][Casual Info]] - a Transient porcelain for Info.  
-- [[https://github.com/kickingvegas/casual-calc][Casual Calc]] - a Transient porcelain for Emacs Calc.
+- [[https://github.com/kickingvegas/casual-calc][Casual Calc]] - a Transient porcelain for Calc.
+- [[https://github.com/kickingvegas/casual-ibuffer][Casual IBuffer]] - a Transient porcelain for IBuffer.  
 - [[https://github.com/kickingvegas/casual-avy][Casual Avy]] - a Transient porcelain for Avy.
 
 * Requirements
 Casual Suite has been verified with the following configuration. 
-- Emacs 29.3 (macOS 14.5, Ubuntu Linux 22.04.4 LTS)
+- Emacs 29.4 (macOS 14.5, Ubuntu Linux 22.04.4 LTS)
 
 * Asks
 As Casual Suite is new, we are looking for early adopters! Your [[https://github.com/kickingvegas/casual-info/discussions][feedback]] is welcome as it will likely impact Casual Suite's evolution, particularly with regards to UI.
@@ -23,6 +24,7 @@ It is highly recommended that a deep reading of the install procedure for each p
 - [[https://github.com/kickingvegas/casual-dired?tab=readme-ov-file#install][Casual Dired]] 
 - [[https://github.com/kickingvegas/casual-info?tab=readme-ov-file#install][Casual Info]] 
 - [[https://github.com/kickingvegas/casual-calc?tab=readme-ov-file#install][Casual Calc]]
+- [[https://github.com/kickingvegas/casual-ibuffer?tab=readme-ov-file#install][Casual IBuffer]] 
 - [[https://github.com/kickingvegas/casual-avy?tab=readme-ov-file#install][Casual Avy]] 
 
 ** TL;DR
@@ -34,34 +36,44 @@ The following lines illustrate an installation of the Casual Suite with no custo
   (require 'casual-suite)
   (keymap-set calc-mode-map "C-o" #'casual-calc-tmenu)
   (keymap-set dired-mode-map "C-o" #'casual-dired-tmenu)
+  (keymap-set isearch-mode-map "<f2>" #'cc-isearch-menu-transient)
+  (keymap-set ibuffer-mode-map "C-o" #'casual-ibuffer-tmenu)
+  (keymap-set ibuffer-mode-map "F" #'casual-ibuffer-filter-tmenu)
+  (keymap-set ibuffer-mode-map "s" #'casual-ibuffer-sortby-tmenu)
   (keymap-set Info-mode-map "C-o" #'casual-info-tmenu)
   (keymap-global-set "M-g" #'casual-avy-tmenu)
-  (keymap-set isearch-mode-map "<f2>" #'cc-isearch-menu-transient)
 #+end_src
 
 For an alternate install using ~use-package~:
 
 #+begin_src elisp :lexical no
-   (require 'casual-suite)
-   (use-package casual-calc
-     :ensure t
-     :bind (:map calc-mode-map ("C-o" . casual-calc-tmenu)))
+  (require 'casual-suite)
+  (use-package casual-calc
+    :ensure t
+    :bind (:map calc-mode-map ("C-o" . casual-calc-tmenu)))
 
-   (use-package casual-info
-     :ensure t
-     :bind (:map Info-mode-map ("C-o" . casual-info-tmenu)))
+  (use-package casual-info
+    :ensure t
+    :bind (:map Info-mode-map ("C-o" . casual-info-tmenu)))
 
-   (use-package casual-dired
-     :ensure t
-     :bind (:map dired-mode-map ("C-o" . casual-dired-tmenu)))
+  (use-package casual-dired
+    :ensure t
+    :bind (:map dired-mode-map ("C-o" . casual-dired-tmenu)))
 
-   (use-package casual-avy
-     :ensure t
-     :bind ("M-g" . casual-avy-tmenu))
+  (use-package casual-avy
+    :ensure t
+    :bind ("M-g" . casual-avy-tmenu))
 
-   (use-package casual-isearch
-     :ensure t
-     :bind (:map isearch-mode-map ("<f2>" . casual-isearch-tmenu)))
+  (use-package casual-isearch
+    :ensure t
+    :bind (:map isearch-mode-map ("<f2>" . casual-isearch-tmenu)))
+
+  (use-package casual-ibuffer
+    :ensure t
+    :bind (:map ibuffer-mode-map
+                ("C-o" . casual-ibuffer-tmenu)
+                ("F" . casual-ibuffer-filter-tmenu)
+                ("s" . casual-ibuffer-sortby-tmenu)))
 #+end_src
 
 * Sponsorship
@@ -70,4 +82,4 @@ If you enjoy using Casual Suite, consider making a modest financial contribution
 [[https://www.buymeacoffee.com/kickingvegas][file:docs/images/default-yellow.png]]
   
 * Acknowledgments
-A heartfelt thanks to all the contributors to Calc, Dired, Info, I-Search, Info, Avy, and [[https://github.com/magit/transient][Transient]]. Casual Suite would not be possible without your efforts.
+A heartfelt thanks to all the contributors to Calc, Dired, Info, I-Search, Info, IBuffer, Avy, and [[https://github.com/magit/transient][Transient]]. Casual Suite would not be possible without your efforts.
