Add casual-bookmarks support

--- a/README.org
+++ b/README.org
@@ -8,7 +8,8 @@ An umbrella package to support a single installation point for all Casual porcel
 - [[https://github.com/kickingvegas/casual-info][Casual Info]] - a Transient porcelain for Info.  
 - [[https://github.com/kickingvegas/casual-calc][Casual Calc]] - a Transient porcelain for Calc.
 - [[https://github.com/kickingvegas/casual-ibuffer][Casual IBuffer]] - a Transient porcelain for IBuffer.
-- [[https://github.com/kickingvegas/casual-re-builder][Casual RE-Builder]] - a Transient porcelain for RE-Builder.  
+- [[https://github.com/kickingvegas/casual-re-builder][Casual RE-Builder]] - a Transient porcelain for RE-Builder.
+- [[https://github.com/kickingvegas/casual-bookmarks][Casual Bookmarks]] - a Transient porcelain for the bookmark list.
 - [[https://github.com/kickingvegas/casual-avy][Casual Avy]] - a Transient porcelain for Avy.
 
 * Requirements
@@ -26,8 +27,9 @@ It is highly recommended that a deep reading of the install procedure for each p
 - [[https://github.com/kickingvegas/casual-info?tab=readme-ov-file#install][Casual Info]] 
 - [[https://github.com/kickingvegas/casual-calc?tab=readme-ov-file#install][Casual Calc]]
 - [[https://github.com/kickingvegas/casual-ibuffer?tab=readme-ov-file#install][Casual IBuffer]]
-- [[https://github.com/kickingvegas/casual-re-builder?tab=readme-ov-file#install][Casual RE-Builder]] 
-- [[https://github.com/kickingvegas/casual-avy?tab=readme-ov-file#install][Casual Avy]] 
+- [[https://github.com/kickingvegas/casual-re-builder?tab=readme-ov-file#install][Casual RE-Builder]]
+- [[https://github.com/kickingvegas/casual-bookmarks?tab=readme-ov-file#install][Casual Bookmarks]]  
+- [[https://github.com/kickingvegas/casual-avy?tab=readme-ov-file#install][Casual Avy]]
 
 ** TL;DR
 Impatient readers can use the following code to put into their Emacs initialization file to immediately use Casual Suite. 
@@ -45,6 +47,7 @@ The following lines illustrate an installation of the Casual Suite with no custo
   (keymap-set Info-mode-map "C-o" #'casual-info-tmenu)
   (keymap-set reb-mode-map "C-o" #'casual-re-builder-tmenu)
   (keymap-set reb-lisp-mode-map "C-o" #'casual-re-builder-tmenu)
+  (keymap-set bookmark-bmenu-mode-map "C-o" #'casual-bookmarks-tmenu)
   (keymap-global-set "M-g" #'casual-avy-tmenu)
 #+end_src
 
@@ -85,6 +88,12 @@ For an alternate install using ~use-package~:
     :ensure t
     :bind (:map reb-mode-map
                 ("C-o" . casual-re-builder-tmenu)))
+
+  (require 'bookmarks)
+  (use-package casual-bookmarks
+    :ensure t
+    :bind (:map bookmark-bmenu-mode-map
+                ("C-o" . casual-bookmarks-tmenu)))
 #+end_src
 
 * Sponsorship
@@ -93,4 +102,4 @@ If you enjoy using Casual Suite, consider making a modest financial contribution
 [[https://www.buymeacoffee.com/kickingvegas][file:docs/images/default-yellow.png]]
   
 * Acknowledgments
-A heartfelt thanks to all the contributors to Calc, Dired, Info, I-Search, Info, IBuffer, RE-Builder, Avy, and [[https://github.com/magit/transient][Transient]]. Casual Suite would not be possible without your efforts.
+A heartfelt thanks to all the contributors to Calc, Dired, Info, I-Search, Info, IBuffer, RE-Builder, Bookmarks, Avy, and [[https://github.com/magit/transient][Transient]]. Casual Suite would not be possible without your efforts.
